--- a/opdracht1/v2/index.html
+++ b/opdracht1/v2/index.html
@@ -1,8 +1,98 @@
-<html>
-  <head></head>
-  <body>
-    <p>
-      De HTML/CSS/JavaScript van versie 2 van opdracht 1
-    </p>
-  </body>
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+  <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Muli:600|Roboto" rel="stylesheet">
+  <title>Studentenhuizen - De plek om jouw kamer te vinden.</title>
+</head>
+<body>
+  <header>
+
+
+    <h1>Studentenhuizen</h1>
+      <input type="text" name="search" placeholder="Ik zoek een..." value="">
+  <nav>
+  <ul>
+    <li><a href="">Home</a></li>
+    <li><a href="">Kamer Zoeken</a></li>
+    <li><a href="">Kamer Plaatsen</a></li>
+    <li><a href="">Huurder Zoeken</a></li>
+  </ul>
+  </nav>
+    </header>
+  <h2>Resultaten</h2>
+  <article>
+<div class="container"></div>
+<div class="content">
+      <h3>Jan Frankenstraat</h3>
+      <p>Nijmegen - Kamer</p>
+      <p>€375,-/m</p>
+      </div>
+    <button>Toon meer info</button>
+    <section class="toon">
+      <h4>Omschrijving</h4>
+<p>Nette kamer met inschrijven Per 15 februari en zelfs al
+  mogelijk per direct want de vorige huurster is er al uit wordt in dit ruime,
+  luxe en lichte appartement te huur aangeboden een nette gemeubileerde kamer met ruime inbouwkast. </p>
+  <p>
+  Het is mogelijk je in te schrijven bij de gemeente. Het appartement is 100m2 en is gelegen in een vrij nieuw appartementencomplex, de voorzieningen als keuken, badkamer en seperate toilet zien er dan ook erg netjes uit en zijn goed onderhouden. Zie de foto met de plattegrond voor de indeling van het appartement. Een van de 2 kleinere kamers onder op de plattegrond van ca 10m2 (780 incl alles) is vrij om te huren.
+De kamer heeft een eigen frans balkon, zie foto.</p> <p>De gemeenschappelijke woonkeuken heeft ook een frans balkon waardoor er veel lichtinval is. De woonkeuken is totaal ca 20m2 en bied naast de luxe keuken met o.a. vaatwasser ruimte voor een tafel om aan te zitten. De kamer en het appartement zijn gestoffeerd inhoudende dat ze een nette vloer hebben, de muren netjes zijn, er gordijnen zijn, en er is een nieuwe wasmachine en droger aanwezig.
+De voorzieningen deel je met 3 werkende mensen.</p>
+
+<div class='test'>
+    <ul>
+        <li class='back'>
+            <p>WiFi Aanwezig</p>
+        </li>
+        <li class='back'>
+            <p>Geen Huisdieren</p>
+        </li>
+    </ul>
+</div>
+    </section>
+  </article>
+
+  <article>
+<div class="container2"></div>
+<div class="content">
+      <h3>Jacob van Lennepkade</h3>
+      <p>Amsterdam - Appartement</p>
+      <p>2750,-/m</p>
+      </div>
+    <button>Toon meer info</button>
+    <section class="toon">
+      <h4>Omschrijving</h4>
+<p>In dit appartement wordt een luxe, gestoffeerde studio met eigen voorzieningen aangeboden voor max 1 persoon. Gratis parkeren voor de deur wat uniek is in Amsterdam. Inschrijven is mogelijk bij de gemeente. Alles is recent (6 maanden geleden) verbouwd en is dan ook nog als nieuw inclusief de stoffering.
+Er is een luxe keuken met o.a. vaatwasser, koelkast en oven.
+Uiteraard is er snel internet.
+<p>
+In deze studio bestaat de stoffering uit: nieuwe laminaat vloer en nette plinten, de muren zijn gesausd, een wasdroogcombinatie, gordijnen.
+Tevens heeft het een nette inbouwkast. Je dient dus zelf een bed en bankje aan te schaffen en je kunt er wonen.</p>
+<p>Er is zelfs een schoonmaakster die om de week je studio schoon maakt.</p>
+    </section>
+  </article>
+
+  <article>
+<div class="container3"></div>
+<div class="content">
+      <h3>Kalkvliet</h3>
+      <p>Terheijden - Huis</p>
+      <p>2500,-/m</p>
+      </div>
+    <button>Toon meer info</button>
+    <section class="toon">
+      <h4>Omschrijving</h4>
+  <p>Kale huur € 371,- servicekosten € 120,- (= o.a. gebruik van gas, water, wekelijks schoonmaken van de gemeensch. ruimtes, 1x per kwartaal glasbewassing).</p>
+<p>Per 1 maart 2019 komt op de 2e verdieping van ons monumentale pand te Wezep (met uitzicht op de voortuin en parkeerplaats) een studio (ca 29,5 m2) vrij met eigen keukenblokje en eigen douche & toilet.
+Deze studio heeft een eigen elektra-meter. De meterstanden worden 1x per kwartaal opgenomen en achteraf gefactureerd. De elektra-kosten bedragen ca € 30,-/35,-per maand.</p><p>
+Mogelijkheid tot het gebruikmaken van wasmachine en droger tegen betaling. Eigen parkeergelegenheid, tevens kan je gebruikmaken van een gemeenschap. berging voor het stallen van o.a. je fiets.
+Waarborgsom is € 491,- (1 maand kale huur ad 371,- + 120,- servicekosten). Huisdieren zijn niet toegestaan!</p>
+    </section>
+  </article>
+
+</body>
+<script src="script.js"></script>
 </html>
